// import * as React from 'react';
// import { ReactElementsList } from 'typings/react';
// import { jestSnapshotRenderTest } from 'testing/jest-utils';
// import { CollapseToggler } from '..';

// const componentsForSnapshotRenderTest: ReactElementsList = {
//     'collapsed true': <CollapseToggler collapsed={true} />,
//     'collapsed false': <CollapseToggler collapsed={false} />,
//     'incoming className': <CollapseToggler className="className" />,
//     'size s': <CollapseToggler size="s" />,
// };

// describe('CollapseToggler', () => {
//     describe('renders', () => {
//         jestSnapshotRenderTest(componentsForSnapshotRenderTest);
//     });
// });
it('', () => {
    expect(true).toBe(true);
});
