// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsBar renders correctly 1`] = `
<div
  class="ControlsBar ControlsBar_size_s"
  data-lego="react"
>
  <div
    class="ControlsBar__item"
    data-lego="react"
  >
    один
  </div>
  <div
    class="ControlsBar__item"
    data-lego="react"
  >
    два
  </div>
  <div
    class="ControlsBar__item"
    data-lego="react"
  >
    три
  </div>
</div>
`;

exports[`ControlsBar renders incoming className 1`] = `
<div
  class="ControlsBar ControlsBar_size_s className"
  data-lego="react"
>
  <div
    class="ControlsBar__item"
    data-lego="react"
  >
    раз
  </div>
</div>
`;
